# AlgorithmLabs

./: README.md
Lab1-Hamurabi/: CMakeLists.txt  OrderProcessor.cpp  OrderProcessor.h  README.md  Resources.h  Save  SaveLoadService.cpp  SaveLoadService.h  YearProcessor.cpp  YearProcessor.h  main.cpp
Lab2-DynamicArray/: Array.h  CMakeLists.txt  README.md  main.cpp  tests.cpp
Lab3-QuickSort/: Array.h  CMakeLists.txt  Sort.h  main.cpp  tests.cpp
Lab4-MemoryManager/: CMakeLists.txt  CoalesceAllocator.cpp  CoalesceAllocator.h  FixedSizeAllocator.cpp  FixedSizeAllocator.h  MemoryAllocator.cpp  MemoryAllocator.h  NativeAllocator.cpp  NativeAllocator.h  README.md  main.cpp
